introduce CES production tax

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -484,6 +484,8 @@ cfg$gms$cm_import_ariadne <- "off" # def <- "off", if import assumptions for Ger
 # switch on energy security scenario for Germany (used in ARIADNE project)
 # sets tax on PE gas
 cfg$gms$cm_EnSecScen <- "off"
+# switch for CES production tax
+cfg$gms$cm_cesTax <- "off"
 
 
 # set upper limits for heat and electricity shares in FE buildlings only for the EU regions
